# stream-py

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  MIGRATION_v2_to_v3.md  Makefile  README.md  ROADMAP.md  conftest.py  dev.py  entrypoint.sh  generate.sh  generate_models.sh  generate_webrtc.sh  pyproject.toml  pytest.ini
.cursor/rules/: ai-instructions.mdc
.github/: .release.yml  release.yml
.github/workflows/: ci.yml  docker-image.yml  initiate_release.yml  integration.yml  release-v2.yml  release.yml  run_tests.yml  (+1 more)
ai/: stt-plugin-consistency-plan.md
docs/: ai-basic.md  ai-codegen.md  ai-testing.md
examples/: __init__.py  env.example  utils.py  vad_example.py
examples/audio_moderation/: README.md  env.example  main.py  pyproject.toml  view_flagged.py
examples/event_system/: event_system_example.py  pyproject.toml
examples/fal_stt_translate/: README.md  env.example  main.py  pyproject.toml
examples/gemini_live/: README.md  env.example  main.py  pyproject.toml
examples/llm_audio_conversation/: README.md  __init__.py  env.example  main.py  pyproject.toml
examples/mcp/: README.md  agent.py  env.example  main.py  pyproject.toml  server.py  transport.py
examples/openai_realtime_speech_to_speech/: README.md  __init__.py  env.example  main.py  pyproject.toml
examples/openai_realtime_speech_to_speech/llm_audio_conversation/: main.py  pyproject.toml
examples/record_audio/: README.md  main.py  pyproject.toml
examples/stt_assemblyai_transcription/: EXAMPLE_SUMMARY.md  README.md  __init__.py  env.example  main.py  pyproject.toml  test_import.py
examples/stt_deepgram_transcription/: README.md  __init__.py  env.example  main.py  pyproject.toml  test_example.py
examples/stt_fal_transcription/: README.md  env.example  main.py  pyproject.toml
examples/stt_moonshine_transcription/: README.md  __init__.py  env.example  main.py  pyproject.toml
examples/stt_moonshine_transcription/tests/: __init__.py
examples/stt_whisper/: pyproject.toml
examples/telemetry_example/: README.md  __init__.py  env.example  main.py  pyproject.toml  test_integration.py
examples/tts_cartesia/: README.md  main.py  pyproject.toml
examples/tts_elevenlabs/: README.md  main.py  pyproject.toml
examples/tts_kokoro/: README.md  env.example  main.py  pyproject.toml
examples/vad_silero/: README.md  main.py  pyproject.toml
examples/video_ai/: README.md  main.py  pyproject.toml
examples/video_moderation/: README.md  main.py  pyproject.toml  view_flagged.py
getstream/: __init__.py  base.py  config.py  exceptions.py  generic.py  logging_utils.py  meta.py  rate_limit.py  stream.py  stream_response.py  tasks.py  utils.py  version.py  webhook.py
getstream/plugins/assemblyai/: README.md  __init__.py  pyproject.toml
getstream/plugins/assemblyai/src/getstream_assemblyai/: __init__.py
getstream/plugins/assemblyai/stt/: __init__.py  stt.py
getstream/plugins/assemblyai/tests/: __init__.py  conftest.py  test_stt.py
plugins/: README.md  test_utils.py
plugins/getstream-plugins-cartesia/: pyproject.toml
plugins/getstream-plugins-cartesia/getstream/plugins/cartesia/: pyproject.toml
plugins/getstream-plugins-cartesia/getstream/plugins/cartesia/tests/: test_tts.py
plugins/getstream-plugins-cartesia/getstream/plugins/cartesia/tts/: tts.py
plugins/getstream-plugins-common/: pyproject.toml
plugins/getstream-plugins-common/getstream/plugins/common/: __init__.py  event_metrics.py  event_serialization.py  event_utils.py  events.py  sts.py  stt.py  tts.py  vad.py
plugins/getstream-plugins-common/getstream/plugins/common/tests/: test_events.py
plugins/getstream-plugins-deepgram/: pyproject.toml
plugins/getstream-plugins-deepgram/getstream/plugins/deepgram/: pyproject.toml
plugins/getstream-plugins-deepgram/getstream/plugins/deepgram/stt/: __init__.py
plugins/getstream-plugins-deepgram/getstream/plugins/deepgram/tests/: conftest.py  test_realtime.py  test_stt.py
plugins/getstream-plugins-elevenlabs/: README.md  pyproject.toml
plugins/getstream-plugins-elevenlabs/getstream/plugins/elevenlabs/tests/: test_tts.py
plugins/getstream-plugins-elevenlabs/getstream/plugins/elevenlabs/tts/: tts.py
plugins/getstream-plugins-fal/: README.md  pyproject.toml
plugins/getstream-plugins-fal/getstream/plugins/fal/stt/: __init__.py
plugins/getstream-plugins-fal/getstream/plugins/fal/tests/: test_stt.py
plugins/getstream-plugins-gemini/: pyproject.toml
plugins/getstream-plugins-gemini/getstream/plugins/gemini/live/: live.py
plugins/getstream-plugins-gemini/getstream/plugins/gemini/tests/: test_live_integration.py
plugins/getstream-plugins-kokoro/: pyproject.toml
plugins/getstream-plugins-kokoro/getstream/plugins/kokoro/tests/: test_tts.py
plugins/getstream-plugins-kokoro/getstream/plugins/kokoro/tts/: tts.py
plugins/getstream-plugins-moonshine/: pyproject.toml
plugins/getstream-plugins-moonshine/getstream/plugins/moonshine/stt/: stt.py
plugins/getstream-plugins-moonshine/getstream/plugins/moonshine/tests/: test_stt.py
scripts/: create_test_assets.py  test_sfu_connect.py
stream/: __init__.py  client.py  config.py  stream.py
stream_sdks/: __init__.py  config.py
tests/: __init__.py  base.py  conftest.py  fixtures.py  test.env.example  test_api_error_remap.py  test_async_stream_close.py  test_asyncstream.py  test_audio_stream_track.py  test_chat_channel.py  test_chat_draft.py  test_chat_integration.py  test_chat_message.py  test_chat_misc.py  test_chat_moderation.py  test_chat_polls.py  test_chat_reminders_locations.py  test_chat_team_usage_stats.py  test_chat_user.py  test_cli.py  test_client.py  test_connection_manager.py  test_connection_utils.py  test_decoding.py  test_docs_quickstart.py  test_docs_verification.py  test_exceptions.py  test_feed_integration.py  test_gzip.py  test_http_client.py  test_integration.py  test_logging.py  test_metrics_prometheus_manual.py  test_operation_name.py  test_pcm_utils.py  test_retry.py  test_rtc.py  test_rtc_simple.py  test_rtc_stats_utils.py  test_signaling.py  (+16 more)
(+1897 files in other folders)
