[project]
name = "getstream"
dynamic = [ "version" ]
description = "GetStream Python SDK - Build scalable activity feeds, chat, and video calling applications"
authors = [
    { name = "sachaarbonel", email = "sacha.arbonel@hotmail.fr" },
    { name = "tbarbugli", email = "tbarbugli@gmail.com" },
]
requires-python = ">=3.9,<4.0.0"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1",
    "pyjwt>=2.8.0,<3",
    "dataclasses-json>=0.6.0,<0.7",
    "marshmallow>=3.21.0,<4",
    "python-dateutil>=2.8.2",
    "pytest-timeout>=2.3.1",
    "aiohttp>=3.11.16",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.10.6",
    "tenacity>=9.1.2",
    "ping3>=4.0.8",
]

[project.optional-dependencies]
openai-realtime = [
  "openai[realtime]>=1.93.0",
]
webrtc = [
    "aiortc>=1.10.1",
    "numpy>=2.2.6,<2.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "onnxruntime>=1.22.0",
    "soundfile>=0.13.1",
    "scipy>=1.15.3,<1.16",
    "twirp>=0.0.7",
    "protobuf>=4.25.1",
    "pyee>=13.0.0",
    "websockets>=15.0.1,<16",
    "websocket-client>=1.8.0",
    "python-dateutil>=2.8.2",
]
mcp = [
    "fastmcp>=2.10.1",
]
plugins = [
    "getstream[webrtc]",
    "getstream-plugins-deepgram",
    "getstream-plugins-moonshine",
    "getstream-plugins-elevenlabs",
    "getstream-plugins-cartesia",
    "getstream-plugins-openai",
    "getstream-plugins-silero",
]

[dependency-groups]
dev = [
    "python-dateutil>=2.8.2,<3",
    "python-dotenv>=1.1.1,<2",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.0.0",
    "grpcio-tools>=1.73.1",
    "mypy-protobuf==3.5.0",
]

[tool.uv.workspace]
members = [
    "getstream/plugins/*",
]
 exclude = [
    "**/__pycache__",
    "**/tests/__pycache__",
    "**/*.pyc",
    "**/dist/",
    "**/*.egg-info/",
    "**/.pytest_cache/",
    "**/.mypy_cache/",
    "**/.ruff_cache/",
 ]

[tool.uv.sources]
getstream-plugins-deepgram = { workspace = true }
getstream-plugins-moonshine = { workspace = true }
getstream-plugins-elevenlabs = { workspace = true }
getstream-plugins-cartesia = { workspace = true }
getstream-plugins-openai = { workspace = true }
getstream-plugins-ten = { workspace = true }
getstream-plugins-silero = { workspace = true }
getstream-plugins-kokoro = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "getstream/version.py"

[tool.hatch.build.targets.wheel]
packages = ["getstream"]

[tool.ruff]
exclude = [
    "getstream/video/rtc/pb",
    ".venv"
]

[tool.ruff.lint]
ignore = ["F405", "F403"]
