[project]
name = "getstream"
dynamic = [ "version" ]
description = "GetStream Python SDK - Build scalable activity feeds, chat, and video calling applications"
authors = [
    { name = "sachaarbonel", email = "sacha.arbonel@hotmail.fr" },
    { name = "tbarbugli", email = "tbarbugli@gmail.com" },
]
requires-python = ">=3.9,<4.0.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28.1",
    "pyjwt>=2.8.0,<3",
    "dataclasses-json>=0.6.0,<0.7",
    "marshmallow>=3.21.0,<4",
    "python-dateutil>=2.8.2",
    "pytest-timeout>=2.3.1",
    "aiohttp>=3.11.16",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.10.6",
    "tenacity>=9.1.2",
    "ping3>=4.0.8",
    "aiortc>=1.13.0",
    "numpy>=2.2.6",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "soundfile>=0.13.1",
    "scipy>=1.15.3",
    "twirp>=0.0.7",
    "protobuf>=6.31.1",
    "websockets>=15.0.1",
    "websocket-client>=1.8.0",
    "structlog>=23.3.0",
    "cartesia>=2.0.5",
    "fal-client>=0.7.0",
    "deepgram-sdk>=4.7.0",
    "elevenlabs>=2.8.0",
    "google-genai>=1.30.0",
]

[project.optional-dependencies]
openai-realtime = [
  "openai[realtime]>=1.93.0",
]
webrtc = [
    "aiortc>=1.10.1",
    "numpy>=2.2.6,<2.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "soundfile>=0.13.1",
    "scipy>=1.15.3,<1.16",
    "twirp>=0.0.7",
    "protobuf>=4.25.1",
    "pyee>=13.0.0",
    "websockets>=15.0.1,<16",
    "websocket-client>=1.8.0",
    "python-dateutil>=2.8.2",
    "structlog<24",
]

[dependency-groups]
dev = [
    "python-dateutil>=2.8.2,<3",
    "python-dotenv>=1.1.1,<2",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.0.0",
    "grpcio-tools>=1.73.1",
    "mypy-protobuf==3.5.0",
]

[tool.uv.workspace]
members = [
    "getstream/plugins/*",
    "examples/test",
]
 exclude = [
    "**/__pycache__",
    "**/tests/__pycache__",
    "**/*.pyc",
    "**/dist/",
    "**/*.egg-info/",
    "**/.pytest_cache/",
    "**/.mypy_cache/",
    "**/.ruff_cache/",
    "examples/",
 ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "getstream/version.py"

[tool.hatch.build.targets.wheel]
packages = ["getstream"]
exclude = [
  "examples/**",
  "protocol/**",
  "scripts/**",
  "tests/**",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "examples/**",
  "protocol/**",
  "scripts/**",
  "tests/**",
]

[tool.ruff]
exclude = [
    "getstream/video/rtc/pb",
    ".venv"
]

[tool.ruff.lint]
ignore = ["F405", "F403"]
