[project]
name = "getstream-audio-moderation-example"
version = "0.1.0"
description = "Example project showing how to moderate speech in a video call using STT with Deepgram"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]>=2.3.0a1",
    "getstream-plugins-deepgram>=0.1.0",
    "python-dotenv>=1.1.1",
]
