[project]
name = "getstream-stt-fal-transcription-example"
version = "0.1.0"
description = "Example project showing how to transcribe a call using STT with Fal.ai"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]>=2.3.0a6",
    "getstream-plugins-fal>=0.1.2",
    "python-dotenv>=1.1.1",
]
