[project]
name = "gemini-live-example"
version = "0.1.0"
description = "Example project showing how to use Google's Gemini Live model with the Stream Python SDK."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]>=2.3.0a1",
    "getstream-plugins-openai>=0.1.1",
    "getstream-plugins-gemini>=0.1.0",
    "python-dotenv>=1.1.1",
]


[tool.uv.sources]
getstream-plugins-gemini = { path = "../../getstream/plugins/gemini" }
