[project]
name = "llm-audio-conversation-example"
version = "0.1.0"
description = "Example project showing how to integrate speech-to-text, text-to-speech and an LLM."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]",
    "getstream-plugins-deepgram",
    "getstream-plugins-elevenlabs",
    "getstream-plugins-silero",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-deepgram = { workspace = true }
getstream-plugins-elevenlabs = { workspace = true }
getstream-plugins-silero = { workspace = true }
