[project]
name = "getstream-example-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getstream[plugins,mcp]>=2.3.0a0",
    "fastmcp>=2.10.1",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-deepgram = { workspace = true }
getstream-plugins-elevenlabs = { workspace = true }
