[project]
name = "openapi-realtime-speech-to-speech-example"
version = "0.1.0"
description = "Example project showing how to use OpenAI's realitme speech-to-speech model with the Stream Python SDK."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]",
    "getstream-plugins-openai",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-openai = { workspace = true }
