[project]
name = "openapi-realtime-speech-to-speech-example"
version = "0.1.0"
description = "Example project showing how to use OpenAI's realitme speech-to-speech model with the Stream Python SDK."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]>=2.3.0a1",
    "getstream-plugins-openai>=0.1.1",
    "python-dotenv>=1.1.1",
]
