[project]
name = "getstream-stt-deepgram-transcription-example"
version = "0.1.0"
description = "Example project showing how to transcribe a call using STT with Deepgram"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]",
    "getstream-plugins-deepgram",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-deepgram = { workspace = true }
