[project]
name = "stt-moonshine-transcription-example"
version = "0.1.0"
description = "Example: Real-time Call Transcription with Moonshine STT"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "getstream[webrtc]",
    "getstream-plugins-moonshine",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-moonshine = { workspace = true }
getstream-plugins-silero = { workspace = true }
