[project]
name = "getstream-stt-whisper-example"
version = "0.1.0"
description = "Example project showing how to use Whisper STT with GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]",
    "python-dotenv>=1.0.0",
    # "getstream-plugins-stt-whisper",  # Uncomment when whisper plugin is created
    "openai-whisper>=20231117",  # Temporary direct dependency until plugin exists
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-deepgram = { workspace = true }
getstream-plugins-elevenlabs = { workspace = true }
getstream-plugins-silero = { workspace = true }
