[project]
name = "getstream-stt-whisper-example"
version = "0.1.0"
description = "Example project showing how to use Whisper STT with GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "getstream[webrtc]",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-deepgram = { workspace = true }
getstream-plugins-elevenlabs = { workspace = true }
getstream-plugins-silero = { workspace = true }
