[project]
name = "tts-cartesia-example"
version = "0.1.0"
description = "Stream Video + Cartesia TTS demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "gestream[webrtc]",
    "getstream-plugins-cartesia",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream = { workspace = true }
