[project]
name = "tts-kokoro-example"
version = "0.1.0"
description = "Stream Video + Kokoro TTS demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "getstream[webrtc]",
    "getstream-plugins-kokoro",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-kokoro = { workspace = true }
