[project]
name = "tts-kokoro-example"
version = "0.1.0"
description = "Stream Video + Kokoro TTS demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "getstream[webrtc]>=2.3.0a6",
    "getstream-plugins-kokoro>=0.1.1",
    "getstream-plugins-common>=0.1.2",
    "misaki[en]>=0.9.4",
    "python-dotenv>=1.1.1",
    "pip>=25.0.1",
    # ^ kokoro->misaki->spacy needs pip within Python to download models, uv lacks pip by default
]
