[project]
name = "vad-silero-example"
version = "0.1.0"
description = "Stream Video + Silero VAD demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "getstream[webrtc]",
    "getstream-plugins-silero",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-silero = { workspace = true } 