[project]
name = "vad-silero-example"
version = "0.1.0"
description = "Stream Video + Silero VAD demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "getstream[webrtc]>=2.3.0a6",
    "getstream-plugins-silero>=0.1.1",
    "python-dotenv>=1.1.1",
]
