[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-ai"
version = "0.1.0"
description = "Video AI with Stream"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getstream[webrtc]",
    "python-dotenv",
    "aiortc",
    "numpy",
    "pillow>=11.3.0",
    "opencv-python>=4.12.0.88",
    "google-genai>=1.20.0",
    "pyaudio>=0.2.14",
]

[project.scripts]
record-audio = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
