[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getstream-plugins-deepgram"
version = "0.1.2"
description = "Deepgram plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "getstream[webrtc]>=2.3.0a6",
    "getstream-plugins-common>=0.1.2",
    "deepgram-sdk>=4.5.0",
    "numpy>=2.2.6,<2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["getstream"]

[tool.hatch.build.targets.sdist]
include = ["/getstream"]
exclude = [
    "**/tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "soundfile>=0.13.1",
    "torchaudio>=2.7.1",
    "scipy>=1.15.3,<1.16",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-common = { workspace = true }
