[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getstream-plugins-kokoro"
version = "0.1.1"
description = "Kokoro TTS plugin for GetStream"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "getstream[webrtc]>=2.3.0a6",
    "getstream-plugins-common>=0.1.1",
    "kokoro>=0.9.4",
    "misaki[en]>=0.9.4",
]

[tool.hatch.build.targets.wheel]
packages = ["getstream"]

[tool.hatch.build.targets.sdist]
include = ["/getstream"]
exclude = [
    "**/tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.uv.sources]
getstream = { workspace = true }
getstream-plugins-common = { workspace = true }
