[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getstream-plugins-assemblyai"
version = "0.1.0"
description = "AssemblyAI plugin for GetStream"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["getstream/plugins/assemblyai"]
